<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pocketshiksha.pocketshiksha.welcome.registration.StudentRegistrationActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="10dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_student_pressed" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#A9A9A9">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_to_login"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/regComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:text="@string/next"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="PID170001"
                android:textSize="15dp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_fname_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_lname_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_dob_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/s_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date of Birth"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_gender_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/s_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Gender"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/student_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_s_phone_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/s_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter you Phone number"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_p_phone_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/p_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your Parents Phone number"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <!-- Permanent Address-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_add_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/s_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Permanent Address"
                    android:maxLines="4"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/registration_college"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/college_arrays"
                android:prompt="@string/college_prompt"/>
            <!-- Course-->
            <Spinner
                android:id="@+id/registration_course"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/course_prompt"/>

            <Spinner
                android:id="@+id/registration_branch"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/branch_prompt"/>
            <Spinner
                android:id="@+id/registration_semister"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sem_arrays"
                android:prompt="@string/sem_prompt"/>





            <!--PASSWORD-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_r_password_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/r_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-enter Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="fill_vertical"
                android:layout_marginTop="5dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/student_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_circular_border_imageview"
                    android:elevation="5dp"
                    app:border_color="#801E8B95"
                    app:border_width="2dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_default_profile"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="img2234.jpg"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
                <Button
                    android:background="@drawable/button_background"
                    android:layout_gravity="right|end"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
